--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+thttps://github.com/Shrink99b/yt-dl@master
+git+https://github.com/Lover-Music/bota
 pyrogram==1.4.16
 TgCrypto
 py-tgcalls==0.8.6
