--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,25 @@
-pyrogram==1.4.16
-TgCrypto
-py-tgcalls==0.8.6
-python-dotenv
-youtube_search_python
-requests
-aiohttp
 aiofiles
+aiohttp
 asyncio
-python-arq
-youtube_search
-search_engine_parser
+dnspython
 ffmpeg-python
-ffmpeg
-Pillow
-ujson
+gitpython
+hachoir
+heroku3
+lyricsgenius
+motor
+pillow
 psutil
-telegram
-python-telegram-bot==13.11
+py-tgcalls==0.8.6
+pykeyboard
+pyrogram==1.4.16
+python-dotenv
+pyyaml==5.3.1
+requests
+speedtest-cli
+spotipy
+tgcrypto
+numpy
+git+https://github.com/joetats/youtube_search@master
+git+https://github.com/alexmercerind/youtube-search-python@main
+yt-dlp
